Test: 오늘 지출 안내 API 인수테스트 추가